--- a/src/includes/style.css
+++ b/src/includes/style.css
@@ -299,52 +299,66 @@ fieldset{
 input[type=button], input[type=submit], input[type=reset] { background: #eee; color: #222; border: 1px outset #ccc; padding: .1em .5em; font-size: 12px;}
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover { background: #FFFFF0; border: 1px inset #ccc; cursor: hand;}input[type=button][disabled], input[type=submit][disabled],input[type=reset][disabled] { background: #f6f6f6; border-style: solid; color: #999;}input[type=text], input[type=password], input[type=checkbox], textarea, select { font-size:11px; border: 1px solid #d7d7d7 }input[type=text], input[type=password], input[type=checkbox], select { padding: .20em .3em }input[type=text]:focus, input[type=password]:focus, textarea:focus, input[type=checkbox]:focus, select:focus { border: 1px solid #886;}
 
-/* Generator */
-.menu_appgenerator{
-	margin-left:auto;
-	margin-right: auto;
-	width: 400px;
-	font-size: 9px;
-}
-.menu_appgenerator ul{
-	list-style: none;
-}
-.menu_appgenerator_step{
-	float: left;
-	height: 15px;
-	width:  60px;
-	text-align: center;
-	vertical-align: middle;
-	background-color: #F6F6F6;
-  	background-image: url(../images/th_bg.gif);
-  	background-repeat: repeat-x;
-	border-top: 1px solid #002F93; 
-	border-bottom: 1px solid #0090FF;
-	border-left: 1px solid #ffffff;
-  	color: #000000;
-	padding-top: 5px;
-}
-.menu_appgenerator_step_on{
-	float: left;
-	height: 15px;
-	width:  60px;
-	text-align: center;
-	vertical-align: middle;
-	background-color: #5DE3FF;
-  	background-image: url(../images/th_sorted_bg.gif);
-  	background-repeat: repeat-x;
-  	font-weight: bold;
-	border-top: 1px solid #002F93; 
-	border-bottom: 1px solid #0090FF;
-	border-left: 1px solid #ffffff;
-	color: #000000;
-	padding-top: 5px;
-}
-
+/* SERVER BROWSER */
 .jqmOverlay{ 
 	background-color: black;
 	opacity: 0.75;
 }
 
-
-
+.server_browser{
+	position: absolute;
+	top: 15%;
+	left: 25%;
+}
+#FileBrowser input[type=button]{
+ background: #D1EBFB;
+ color: #222;
+ border: 1px outset #ccc;
+ padding: .1em .5em;
+ font-size: 9px;
+}
+#FileBrowser input[type=button]:hover {
+ background: #FFD21D;
+ border: 1px inset #ccc;
+ cursor: hand;
+}
+#FileBrowser input[type=button][disabled]{
+ background: #f6f6f6;
+ border-style: solid;
+ color: #999;
+}
+#FileBrowser .container{
+    width: 550px;
+    margin: 10px; 
+    border: 2px outset #ddd;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #FFFFFF;
+}
+#FileBrowser .browser_titlebar{
+    border-bottom:1px solid #ddd; 
+    background-color: #f5f5f5;
+    padding: 5px;
+    font-weight:bold;
+}
+#FileBrowser .filelisting{
+    line-height:15px;
+    font-weight:bold;
+	height: 275px;
+    overflow-y: scroll;
+}
+#FileBrowser .selectedBar{
+    font-size:9px;
+    font-weight: bold;
+    color: white;
+    background-color: #333333;
+    padding:3px;
+    border-top:1px solid #ddd;
+}
+#FileBrowser .bottomBar{
+    border-top:1px solid #ddd; 
+    background-color: #f5f5f5;
+    padding: 5px;
+    font-weight:bold; 
+    text-align:right;
+}
