FInalized code generation
git-svn-id: http://subversion.assembla.com/svn/coldbox-dashboard/trunk/src@24 2385d54e-5a2a-0410-9eb9-86b772a996ef

--- a/includes/style.css
+++ b/includes/style.css
@@ -273,6 +273,9 @@ li{
 	font-size: 9px;
 	border-bottom: 1px solid #cccccc;
 }
+.tablelisting tr.even{
+	background-color: #EFF6FF;
+}
 .tablelisting tr:hover { background: #E8F2FE }
 .tablelisting th {
   text-align: left;
