--- a/src/includes/style.css
+++ b/src/includes/style.css
@@ -42,7 +42,7 @@ a:hover{
 	color: #E58108;
 }/* GUI BARS */
 .logo{
-	background: url(../images/dashboard_logo.gif) no-repeat;
+	background: url(../images/dashboard_logo.png) no-repeat;
 	width: 170px;
 	height: 60px;
 	background-color: "transparent";
@@ -95,7 +95,7 @@ a:hover{
  	margin: 15px;
 }/*GUI Declarations */
 .loginbox{
-	width: 600px;
+	width: 800px;
 	height: 350px;
 	border: 1px outset #cccccc;
 	margin: auto;
@@ -172,12 +172,12 @@ li{
 }
 /* CONTENT  */
 #content{
-	width: 700px;
+	width: 95%;
 	height: 100%;
 	text-align:left;
 }
 .maincontentbox{
-	width: 700px;
+	width: 100%;
 	border: 1px outset #cccccc;
 	background: url(../images/contentboxes_footer.png) repeat-x bottom;
 	margin-top:10px;
@@ -306,6 +306,30 @@ input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover { b
 .jqmOverlay{ 
 	background-color: black;
 	opacity: 0.75;
+}
+.jqmWindow {
+    display: none;
+    position: fixed;
+    top: 17%;
+    left: 50%;
+    margin-left: -300px;
+    width: 600px;
+    background-color: #EEE;
+    color: #333;
+    border: 1px solid black;
+    padding: 12px;
+}
+/* Background iframe styling for IE6. Prevents ActiveX bleed-through (<select> form elements, etc.) */
+* iframe.jqm {position:absolute;top:0;left:0;z-index:-1;
+	width: expression(this.parentNode.offsetWidth+'px');
+	height: expression(this.parentNode.offsetHeight+'px');
+}
+/* Fixed posistioning emulation for IE6
+     Star selector used to hide definition from browsers other than IE6
+     For valid CSS, use a conditional include instead */
+* html .jqmWindow {
+     position: absolute;
+     top: expression((document.documentElement.scrollTop || document.body.scrollTop) + Math.round(17 * (document.documentElement.offsetHeight || document.body.clientHeight) / 100) + 'px');
 }
 
 .server_browser{
